--- a/.travis.yml
+++ b/.travis.yml
@@ -68,5 +68,5 @@ jobs:
           github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
           keep_history: true
           on:
-            branch: master
+            branch: alex/documentation-branch-test
           local_dir: "./site"
