--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,7 @@
 
 site_name: ChainBridge documentation
 site_description: Modular Multi-Directional Blockchain Bridge to interact with Multiple Networks; Ethereum, Ethereum Classic, Substrate, Cosmos-SDK based chains.
+site_url: https://chainsafe.github.io/chainbridge
 
 repo_name: chainsafe/chainbridge
 repo_url: https://github.com/ChainSafe/chainbridge
