--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,7 @@ jobs:
           on:
             tags: true
         - provider: pages
+          script: touch docs/.nojekyll
           skip_cleanup: true
           github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
           keep_history: true
